cbits/Bullet.h

void btDynamicsWorld_removeVehicle(void *c,void* p0); //method: removeVehicle void ( ::btDynamicsWorld::* )( ::btActionInterface * ) 
void btDynamicsWorld_removeConstraint(void *c,void* p0); //method: removeConstraint void ( ::btDynamicsWorld::* )( ::btTypedConstraint * ) 
int btDynamicsWorld_getNumConstraints(void *c); //method: getNumConstraints int ( ::btDynamicsWorld::* )(  ) const
void btDynamicsWorld_removeRigidBody(void *c,void* p0); //method: removeRigidBody void ( ::btDynamicsWorld::* )( ::btRigidBody * ) 
//not supported method: setInternalTickCallback void ( ::btDynamicsWorld::* )( ::btInternalTickCallback,void *,bool ) 
// error:  - unsupported, void * - ok, bool - ok, void - ok

void btDynamicsWorld_synchronizeMotionStates(void *c); //method: synchronizeMotionStates void ( ::btDynamicsWorld::* )(  ) 
void btDynamicsWorld_addConstraint(void *c,void* p0,int p1); //method: addConstraint void ( ::btDynamicsWorld::* )( ::btTypedConstraint *,bool ) 
void btDynamicsWorld_getGravity(void *c,float* ret); //method: getGravity ::btVector3 ( ::btDynamicsWorld::* )(  ) const
void btDynamicsWorld_debugDrawWorld(void *c); //method: debugDrawWorld void ( ::btDynamicsWorld::* )(  ) 
void btDynamicsWorld_removeAction(void *c,void* p0); //method: removeAction void ( ::btDynamicsWorld::* )( ::btActionInterface * ) 
void btDynamicsWorld_setWorldUserInfo(void *c,void* p0); //method: setWorldUserInfo void ( ::btDynamicsWorld::* )( void * ) 
void btDynamicsWorld_removeCharacter(void *c,void* p0); //method: removeCharacter void ( ::btDynamicsWorld::* )( ::btActionInterface * ) 
void* btDynamicsWorld_getConstraint(void *c,int p0); //method: getConstraint ::btTypedConstraint * ( ::btDynamicsWorld::* )( int ) 
void* btDynamicsWorld_getConstraint0(void *c,int p0); //method: getConstraint ::btTypedConstraint * ( ::btDynamicsWorld::* )( int ) 
void* btDynamicsWorld_getConstraint1(void *c,int p0); //method: getConstraint ::btTypedConstraint const * ( ::btDynamicsWorld::* )( int ) const
void* btDynamicsWorld_getConstraintSolver(void *c); //method: getConstraintSolver ::btConstraintSolver * ( ::btDynamicsWorld::* )(  ) 
int btDynamicsWorld_stepSimulation(void *c,float p0,int p1,float p2); //method: stepSimulation int ( ::btDynamicsWorld::* )( ::btScalar,int,::btScalar ) 
void btDynamicsWorld_addCharacter(void *c,void* p0); //method: addCharacter void ( ::btDynamicsWorld::* )( ::btActionInterface * ) 
//not supported method: getWorldType ::btDynamicsWorldType ( ::btDynamicsWorld::* )(  ) const
// error:  - unsupported

void btDynamicsWorld_addVehicle(void *c,void* p0); //method: addVehicle void ( ::btDynamicsWorld::* )( ::btActionInterface * ) 
void* btDynamicsWorld_getWorldUserInfo(void *c); //method: getWorldUserInfo void * ( ::btDynamicsWorld::* )(  ) const
void btDynamicsWorld_setConstraintSolver(void *c,void* p0); //method: setConstraintSolver void ( ::btDynamicsWorld::* )( ::btConstraintSolver * ) 
// attribute not supported: //attribute: ::btInternalTickCallback btDynamicsWorld->m_internalTickCallback
// attribute not supported: //attribute: ::btInternalTickCallback btDynamicsWorld->m_internalPreTickCallback
void btDynamicsWorld_m_worldUserInfo_set(void *c,void* a); //attribute: void * btDynamicsWorld->m_worldUserInfo
void* btDynamicsWorld_m_worldUserInfo_get(void *c); //attribute: void * btDynamicsWorld->m_worldUserInfo
void btDynamicsWorld_m_solverInfo_set(void *c,void* a); //attribute: ::btContactSolverInfo btDynamicsWorld->m_solverInfo
void* btDynamicsWorld_m_solverInfo_get(void *c); //attribute: ::btContactSolverInfo btDynamicsWorld->m_solverInfo
void* btRigidBody_new0(void* p0); //constructor: btRigidBody  ( ::btRigidBody::* )( ::btRigidBody::btRigidBodyConstructionInfo const & ) 
void* btRigidBody_new1(float p0,void* p1,void* p2,float* p3); //constructor: btRigidBody  ( ::btRigidBody::* )( ::btScalar,::btMotionState *,::btCollisionShape *,::btVector3 const & ) 
void btRigidBody_free(void *c);
 
void btRigidBody_setGravity(void *c,float* p0); //method: setGravity void ( ::btRigidBody::* )( ::btVector3 const & ) 